--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -8,11 +8,11 @@ section:
   template: sections/about.html
 
 # your designation
-designation: Software Engineer
+designation: Junior Software Developer
 # your company information
-company:
-  name: Example Co.
-  url: "https://www.example.com"
+# company:
+#   name: The University of Western Australia
+#   url: "https://www.uwa.edu.au"
 
 # your resume. this file path should be relative to you "static" directory
 resume: "files/resume.pdf"
