--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,5 @@
-baseURL: https://elijahmullens.com/
+# baseURL: https://elijahmullens.com/
+baseURL: http://localhost:1313/
 languageCode: en-au
 title: Elijah Mullens
 
@@ -6,6 +7,8 @@ module:
   imports:
     - path: github.com/hugo-toha/toha/v4
   mounts:
+    - source: static/files
+      target: static/files
     - source: ./node_modules/flag-icon-css/flags
       target: static/flags
     - source: ./node_modules/@fontsource/mulish/files
@@ -42,5 +45,10 @@ params:
     darkmode:
       enable: true
     
-  # footer:
-  #   enable: true
+  footer:
+    enable: true
+
+    newsletter:
+      enable: false
+    credentials:
+      enable: true
